se agrega boton reiniciar y imagenes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     <section id="contenedor_boto">
         <div class="targeta">
             <button class="botones" id="boton_piedra"><img src="./imagenes/piedra.png"></button>
-            <button class="botones" id="boton_papel">papel</button>
-            <button class="botones" id="boton_tijeras">tijeras</button>
+            <button class="botones" id="boton_papel"><img src="./imagenes/papel.png"></button>
+            <button class="botones" id="boton_tijeras"><img src="./imagenes/tijera.png"></button>
         </div>
+        <button id="reiniciar">reiniciar</button>
     </section>
     <!--historal partida-->
     <section id="mensajes">
